--- a/styles/animation.css
+++ b/styles/animation.css
@@ -1,3 +1,124 @@
+/*HOME ANIMATION*/
+.square1.anim {
+  transform: translate(70%, 40%) rotateZ(45deg) scale(0.02);
+  animation:  squareSpin 1.8s ease forwards,
+  windmill1 20s linear infinite 1.7s;
+}
+
+@keyframes squareSpin {
+  0% {
+    transform: translate(70%, 40%) rotateZ(0deg) scale(0.02);
+  }
+  100% {
+    transform: translate(70%, 40%) rotateZ(765deg) scale(1);
+  }
+}
+
+@keyframes windmill1 {
+  0% {
+    transform: translate(70%, 40%) rotateZ(45deg) scale(1);
+  }
+  100% {
+    transform: translate(70%, 40%) rotateZ(765deg) scale(1);
+  }
+}
+
+.square2.anim {
+  transform: translate(70%, 40%) rotateZ(65deg) scale(0.02);
+  animation:  squareSpin2 1.8s ease forwards,
+  windmill2 20s linear infinite 1.7s;
+}
+
+@keyframes squareSpin2 {
+  0% {
+    transform: translate(70%, 40%) rotateZ(65deg) scale(0.02);
+  }
+  100% {
+    transform: translate(70%, 40%) rotateZ(785deg) scale(1);
+  }
+}
+
+@keyframes windmill2 {
+  0% {
+    transform: translate(70%, 40%) rotateZ(65deg) scale(1);
+  }
+  100% {
+    transform: translate(70%, 40%) rotateZ(785deg) scale(1);
+  }
+}
+
+.first-box.active p {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  border-right: 4px solid #666;
+  text-shadow: 0 2px 10px #834eff;
+  animation: typing 1.2s,
+  cursor 0.4s step-end infinite alternate;
+}
+
+.second-box.active p {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  border-right: 4px solid #666;
+  text-shadow: 0 2px 10px #834eff;
+  animation: typing 1.2s,
+  cursor 0.4s step-end infinite alternate;
+}
+
+.third-box.active p {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  border-right: 4px solid #666;
+  text-shadow: 0 2px 10px #834eff;
+  animation: typing 0.8s,
+  cursor 0.4s step-end infinite alternate;
+}
+
+.last-box.active p {
+  display: inline-block;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 100%;
+  border-right: 4px solid #666;
+  text-shadow: 0 2px 10px #834eff;
+  animation: typing 1.4s,
+  cursor 0.4s step-end infinite alternate;
+}
+
+@keyframes typing {
+  from {width: 0;}
+}
+
+@keyframes cursor {
+  50% {
+    border-right: 4px solid transparent;
+  }
+}
+
+.arrow-down {
+  font-size: 20px;
+  animation: forArrowDown 0.8s infinite;
+}
+
+@keyframes forArrowDown {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/*CONTACT ANIMATION*/
 .get-in-touch.anim {
   opacity: 0;
   animation: fadeIn 1s ease-in forwards;
