--- a/styles/contact.css
+++ b/styles/contact.css
@@ -123,7 +123,7 @@
 .contact-box {
   display: flex;
   width: 100%;
-  justify-content: space-around;
+  justify-content: space-evenly;
   margin: 60px 50px;
   opacity: 0;
 }
