--- a/styles/home.css
+++ b/styles/home.css
@@ -9,11 +9,34 @@
   padding: 20px 0;
 }
 
+.square1 {
+  position: absolute;
+  height: 500px;
+  width: 500px;
+  transform: translate(70%, 40%) rotateZ(45deg);
+  background: #7a7a7a4b;
+  border: 1px solid #00000054;
+  box-shadow: 0 4 20px #64646469;
+  border-radius: 50px;
+}
+
+.square2 {
+  position: absolute;
+  height: 500px;
+  width: 500px;
+  transform: translate(70%, 40%) rotateZ(65deg);
+  border: 1px solid #00000091;
+  background: #ffffff0e;
+  box-shadow: 0 0 15px #00000059;
+  border-radius: 50px;
+}
+
 .content-box {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
   position: relative;
+  z-index: 2;
 }
 
 .introduction {
@@ -116,69 +139,23 @@
   display: none;
 }
 
-.first-box.active p {
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
-  border-right: 5px solid #666;
-  animation: typing 1.2s,
-  cursor 0.4s step-end infinite alternate;
-}
-
-.second-box.active p {
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
-  border-right: 5px solid #666;
-  animation: typing 1.2s,
-  cursor 0.4s step-end infinite alternate;
-}
-
-.third-box.active p {
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
-  border-right: 5px solid #666;
-  animation: typing 1s,
-  cursor 0.4s step-end infinite alternate;
-}
-
-.last-box.active p {
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  width: 100%;
-  border-right: 5px solid #666;
-  animation: typing 0.8s,
-  cursor 0.4s step-end infinite alternate;
-}
-
-@keyframes typing {
-  from {width: 0;}
-}
-
-@keyframes cursor {
-  50% {
-    border-right: 5px solid transparent;
+@media screen and (max-width: 1000px) {
+  .home {
+    height: 100%;
   }
-}
-
-.arrow-down {
-  font-size: 20px;
-  animation: forArrowDown 0.8s infinite;
-}
-
-@keyframes forArrowDown {
-  0% {
-    transform: translateY(0);
+  .content-box {
+    flex-direction: column;
+    align-items: center;
   }
-  50% {
-    transform: translateY(10px);
+  .picture-box img {
+    height: 150px;
+    width: 150px;
+    object-position: 0 -40px;
   }
-  100% {
-    transform: translateY(0);
+  .introduction {
+    width: 400px;
+  }
+  .animation-introduction {
+    opacity: 0;
   }
 }
