--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ nav {
   font-size: 18px;
 }
 
+.nav-mobile {
+  display: none;
+}
+
 .navbar {
   position: relative;
   display: flex;
@@ -262,6 +266,170 @@ footer section ul li {
 
 
 @media screen and (max-width: 1000px) {
+  body {
+    scrollbar-width: none;
+  }
+
+  .nav-mobile {
+    position: fixed;
+    display: flex;
+    right: 0;
+    height: 100%;
+    width: 50%;
+    transform: translateX(100%);
+  }
+
+  .nav-bar {
+    position: absolute;
+    top: 35px;
+    left: 25px;
+    height: 30px;
+    width: 30px;
+    gap: 6px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transform: translateX(-80px);
+  }
+
+  .nav-mobile.close {
+    animation: closeNav 0.3s ease-in forwards;
+  }
+
+  .nav-bar.close {
+    animation: closeNavBar 0.3s ease-in forwards;
+  }
+
+  .line1 {
+    height: 3px;
+    border-radius: 20px;
+    background: white;
+  }
+
+  .navbar-mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 40px;
+    padding-top: 100px;
+    gap: 40px;
+    top: 0;
+    height: 100vh;
+    background: #0f0f0f;
+    width: 100%;
+    backdrop-filter: blur(15px);
+  }
+
+  /*TOGGLE BAR*/
+  .nav-mobile.toggle {
+    position: fixed;
+    right: 0;
+    background: #0f0f0f;
+    height: 100%;
+    width: 50%;
+    animation: toggleNav 0.3s ease-in 0.3s forwards;
+  }
+
+  @keyframes toggleNav {
+    0% {
+      transform: translateX(100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+  @keyframes closeNav {
+    0% {
+      transform: translateX(0);
+    }
+    100% {
+      transform: translateX(100%);
+    }
+  }
+
+  .nav-bar.toggle {
+    position: absolute;
+    top: 35px;
+    left: 25px;
+    height: 30px;
+    width: 30px;
+    gap: 6px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    animation: toggleNavBar 0.3s ease-in forwards;
+  }
+
+  @keyframes toggleNavBar {
+    0% {
+      transform: translateX(-80px) rotateZ(0deg);
+    }
+    100% {
+      transform: translateX(0) translateY(-5px) rotateZ(90deg);
+    }
+  }
+
+  @keyframes closeNavBar {
+    0% {
+      transform: translateX(0) translateY(-5px) rotateZ(90deg);
+    }
+    100% {
+      transform: translateX(-80px) rotateZ(0deg);
+    }
+  }
+
+  .line1 {
+    height: 3px;
+    border-radius: 20px;
+    background: white;
+  }
+
+  .navbar-mobile.toggle {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-left: 40px;
+    padding-top: 100px;
+    gap: 40px;
+    top: 0;
+    height: 100vh;
+    background: #0f0f0f;
+    width: 100%;
+    backdrop-filter: blur(15px);
+  }
+
+  .navbar-mobile li {
+    list-style-type: none;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s ease;
+  }
+
+  .navbar-mobile li a {
+    padding: 10px;
+    border-radius: 8px;
+    transition: 0.3s ease;
+  }
+
+  .nav-mobile li a:hover {
+    background: #fff;
+    color: #1a1a1a;
+  }
+
+  #home_.active, #about_.active, #skills_.active,
+  #projects_.active, #contact_.active  {
+    background: #fff;
+    color: #1a1a1a;
+    padding: 10px;
+    border-radius: 8px;
+  }
+
+  .navbar-mobile .toggle:hover {
+    color: #fff;
+  }
+
   nav {
     width: 100vw;
     padding: 20px 20px;
@@ -271,5 +439,40 @@ footer section ul li {
   }
   .navbar, .active-bar {
     display: none;
+  }
+
+  .nav-line {
+    padding: 20px 40px;
+    align-items: center;
+  }
+
+  .nav-line p:nth-child(2){
+    line-height: 26px;
+  }
+
+  .footer-box {
+    gap: 20px;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .footer-box section {
+    align-items: center;
+    text-align: center;
+    width: 400px;
+    height: max-content;
+  }
+
+  .my-location, .acc-links {
+    justify-content: center;
+  }
+
+  .connect-with {
+    padding: 20px;
+    width: 350px;
+  }
+
+  footer p:nth-last-child(1) {
+    text-align: center;
   }
 }
