--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 html, body {
   position: relative;
   background: #1a1a1a;
-  font-family: "Montserrat", sans-serif;
+  font-family:"Inter", sans-serif;
   color: #fff;
   width: 100vw;
   overflow-x: hidden;
