--- a/styles/home.css
+++ b/styles/home.css
@@ -49,6 +49,7 @@
 }
 
 .picture-box {
+  position: relative;
   border-bottom: 1px solid #6666665b;
   width: 100%;
   padding: 30px;
@@ -63,6 +64,7 @@
   object-position: 0 -60px;
   border-radius: 200px;
   border: 3px solid #66666663;
+  z-index: 2;
 }
 
 .introduction-box {
