--- a/styles/projects.css
+++ b/styles/projects.css
@@ -7,6 +7,23 @@
   border-bottom: 1px solid #6666666c;
 }
 
+.current-projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+}
+
+.project-vid {
+  height: 600px;
+  border: 2px solid #00b02c;
+}
+
+.project-vid video {
+  height: 100%;
+  width: 100%;
+}
+
 .all-projects {
   display: flex;
   flex-direction: column;
