--- a/styles/home.css
+++ b/styles/home.css
@@ -61,7 +61,7 @@
   height: 220px;
   width: 220px;
   object-fit: cover;
-  object-position: 0 -60px;
+  object-position: center;
   border-radius: 200px;
   border: 3px solid #66666663;
   z-index: 2;
