--- a/styles/home.css
+++ b/styles/home.css
@@ -51,17 +51,17 @@
 .picture-box {
   position: relative;
   border-bottom: 1px solid #6666665b;
-  width: 100%;
+  width: max-content;
+  height: max-content;
   padding: 30px;
   display: flex;
   justify-content: center;
-}
+  }
 
 .picture-box img {
   height: 220px;
   width: 220px;
-  object-fit: cover;
-  object-position: center;
+  object-fit: contain;
   border-radius: 200px;
   border: 3px solid #66666663;
   z-index: 2;
@@ -198,7 +198,6 @@
   .picture-box img {
     height: 150px;
     width: 150px;
-    object-position: 0 -40px;
   }
   .introduction {
     width: 400px;
