update the projects and added carousel animation for each featured projects

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -316,6 +316,11 @@
     padding: 20px;
   }
 
+  .get-in-touch p:nth-child(3){
+    width: 100%;
+    font-size: 14px;
+  }
+
   .touch-by-touch {
     flex-direction: column;
     gap: 10px;
