--- a/styles/projects.css
+++ b/styles/projects.css
@@ -44,8 +44,7 @@
 .my-project {
   display: flex;
   width: 100%;
-  justify-content: center;
-  flex-wrap: wrap;
+  animation: imageSlider0 10s infinite linear alternate;
 }
 
 .project-container {
@@ -57,8 +56,8 @@
   align-items: center;
   height: 700px;
   min-height: 600px;
-  max-width: fit-content;
-  min-width: 400px;
+  width: 700px;
+  min-width: 350px;
   margin-top: 35px;
   border: 1px solid #6666666c;
   border-radius: 8px;
@@ -241,18 +240,32 @@ video {
 }
 
 @media screen and (max-width: 1000px) {
+
+  .project-header {
+    width: 350px;
+  }
+
+  .project-header h2 {
+    font-size: 20px;
+  }
+
   .my-project {
     width: 100vw;
+    display: flex;
+    flex-wrap: nowrap;
+    animation: imageSlider 10s infinite linear alternate;
   }
+
   .project-container {
-    width: 300px;
-    height: 300px;
+    height: 200px;
     font-size: 12px;
   }
 
   .project-img {
     height: 150px;
-  }
+    width: 100%;
+    object-fit: cover;
+  } 
 
   .other-projects-container {
     flex-wrap: wrap;
@@ -272,5 +285,24 @@ video {
   }
   .see-project a {
     font-size: 12px;
+  }
+}
+
+
+@keyframes imageSlider {
+  0% {
+    transform: translateX(40%);
+  }
+  100% {
+    transform: translateX(-300%);
+  }
+}
+
+@keyframes imageSlider0 {
+  0% {
+    transform: translateX(60%);
+  }
+  100% {
+    transform: translateX(-40%);
   }
 }
