--- a/styles/projects.css
+++ b/styles/projects.css
@@ -44,19 +44,23 @@
 .my-project {
   display: flex;
   width: 100%;
-  animation: imageSlider0 10s infinite linear alternate;
+}
+
+.project-group {
+  display: flex;
+  width: 100%;
+  animation: imageSlider0 10s infinite linear;
 }
 
 .project-container {
   position: relative;
   display: flex;
-  flex: 1 1 300px;
+  flex: 0 0 600px;
   flex-direction: column;
   margin: 0 15px;
   align-items: center;
   height: 700px;
   min-height: 600px;
-  width: 700px;
   min-width: 350px;
   margin-top: 35px;
   border: 1px solid #6666666c;
@@ -250,14 +254,21 @@ video {
   }
 
   .my-project {
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-wrap: nowrap;
-    animation: imageSlider 10s infinite linear alternate;
+  }
+
+  .project-group {
+    display: flex;
+    gap: 1em;
+    width: 100%;
+    animation: imageSlider0 10s infinite linear;
   }
 
   .project-container {
-    height: 200px;
+    flex: 0 0 300px;
+    height: 150px;
     font-size: 12px;
   }
 
@@ -276,14 +287,41 @@ video {
     flex: 1 1 150px;
   }
 
-.description-box {
-  font-size: 16px;
-}
-
-  .see-project div {
-    padding: 10px;
+  .my-other-projects {
+    display: flex;
+    justify-content: center;
   }
-  .see-project a {
+
+  .other-projects {
+    flex: 0 1 350px;
+  }
+
+  .see-project {
+    display: flex;
+    align-items: center;
+    width: 250px;
+    height: 50px;
+    padding: 0 10px;
+    text-align: center;
+    margin: 0;
+  }
+
+  .demo {
+    display: flex;
+    align-items: center;
+  }
+  
+  .play-video {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+  }
+
+  .description-box {
+    font-size: 16px;
+  }
+
+  .project-description {
     font-size: 12px;
   }
 }
@@ -294,15 +332,15 @@ video {
     transform: translateX(40%);
   }
   100% {
-    transform: translateX(-300%);
+    transform: translateX(-60%);
   }
 }
 
 @keyframes imageSlider0 {
   0% {
-    transform: translateX(60%);
+    transform: translateX(40%);
   }
   100% {
-    transform: translateX(-40%);
+    transform: translateX(-60%);
   }
 }
