--- a/styles/contact.css
+++ b/styles/contact.css
@@ -38,7 +38,6 @@
 .touch-by-touch {
   position: relative;
   display: flex;
-  flex-direction: column;
   gap: 30px;
   margin-top: 25px;
   padding: 10px 45px;
@@ -185,10 +184,11 @@
 .career-objectives {
   display: flex;
   flex-direction: column;
-  width: 650px;
+  max-width: 650px;
+  width: 100%;
   gap: 10px;
   border-top: 1px solid #6666669a;
-  padding-top: 15px;
+  padding: 15px 15px 0;
 }
 
 .career-objectives p:nth-child(1){
@@ -202,7 +202,9 @@
 }
 
 .card-opportunity {
-  width: 250px;
+  min-width: 200px;
+  width: 100%;
+  flex: 1 0 250px;
   padding: 20px 10px;
   border-radius: 8px;
   display: flex;
@@ -220,6 +222,10 @@
 .card-opportunity i {
   background: none;
   padding: 0;
+}
+
+.card-opportunity p {
+  font-size: 0.9em;
 }
 
 .card-opportunity p:nth-last-child(1){
@@ -339,7 +345,7 @@
   }
 
   .card1, .card2 {
-    height: 300px;
+    height: 250px;
     padding: 20px;
   }
 
@@ -382,16 +388,19 @@
 
   .career-objectives section {
     justify-content: center;
+    padding: 20px;
     width: 100%;
   }
 
   .career-objectives section div {
-    width: 50%;
+    min-width: 150px;
+    width: 100%;
   }
 
   .send-message {
-    min-width: 300px;
+    min-width: 250px;
     padding: 20px;
+    margin: 10px;
   }
 
   .input-box {
